mount: better --move description
Reported-by: Paul Johnson <pauljohn@ku.edu>
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/mount/mount.8
+++ b/mount/mount.8
@@ -192,6 +192,8 @@ or shortoption
 .B mount -M
 .I olddir newdir
 .RE
+This will cause the contents which previously appeared under olddir to be
+accessed under newdir.  The physical location of the files is not changed.
 .RE
 
 .B The shared subtrees operations.
