mount: add squashfs to mount.8
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/mount/mount.8
+++ b/mount/mount.8
@@ -523,6 +523,7 @@ currently supported include:
 .IR ramfs ,
 .IR reiserfs ,
 .IR romfs ,
+.IR squashfs ,
 .IR smbfs ,
 .IR sysv ,
 .IR tmpfs ,
@@ -1933,6 +1934,9 @@ Enable POSIX Access Control Lists. See the
 manual page.
 
 .SH "Mount options for romfs"
+None.
+
+.SH "Mount options for squashfs"
 None.
 
 .SH "Mount options for smbfs"
