mount: fix typo in mount.8
Reported-by: Joe Peterson <joe@skyrush.com>
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/mount/mount.8
+++ b/mount/mount.8
@@ -1526,7 +1526,7 @@ Long filenames are stored on disk in Unicode format.
 .BI tz=UTC
 This option disables the conversion of timestamps
 between local time (as used by Windows on FAT) and UTC
-(which Linux uses internally).  This is particuluarly
+(which Linux uses internally).  This is particularly
 useful when mounting devices (like digital cameras)
 that are set to UTC in order to avoid the pitfalls of
 local time.
