Add "wlan" and "ultrawideband" as aliases for "wifi" and "uwb".
I tend to think "wlan" rather than "wifi"; also, it fits in nicely with "wwan".
Also, these aliases are what the kernel uses.

--- a/rfkill.8
+++ b/rfkill.8
@@ -22,7 +22,8 @@ List the current state of all available rfkill-using devices.
 .TP
 .BI block " index|type"
 Disable the device corresponding to the given index.
-\fItype\fR is one of "all", "wifi", "bluetooth", "uwb", "wimax", "wwan" or "gps".
+\fItype\fR is one of "all", "wifi", "wlan", "bluetooth", "uwb",
+"ultrawideband", "wimax", "wwan" or "gps".
 .TP
 .BI unblock " index|type"
 Enable the device corresponding to the given index. If the device is
