Add rfkill type "fm" to the man page.

--- a/rfkill.8
+++ b/rfkill.8
@@ -24,7 +24,7 @@ or just all of the given type.
 .BI block " index|type"
 Disable the device corresponding to the given index.
 \fItype\fR is one of "all", "wifi", "wlan", "bluetooth", "uwb",
-"ultrawideband", "wimax", "wwan" or "gps".
+"ultrawideband", "wimax", "wwan", "gps" or "fm".
 .TP
 .BI unblock " index|type"
 Enable the device corresponding to the given index. If the device is
