--- a/TODO
+++ b/TODO
@@ -24,6 +24,11 @@ libblkid
 	...
 	blkid_unref(tp);
 
+blkid(8)
+  
+  - add a new option (-r) that allows to print removable block devices that
+    are missing in /proc/partitions, see blkid_probe_all_removable().
+
 wipefs
 ------
 
