docs: update AUTHORS file
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/AUTHORS
+++ b/AUTHORS
@@ -81,6 +81,7 @@ CONTRIBUTORS:
       Flávio Leitner <fleitner@redhat.com>
       Florentin Duneau <fduneau@gmail.com>
       Florian Zumbiehl <florz@florz.de>
+      Francesco Cosoleto <cosoleto@gmail.com>
       Frédéric Bothamy <frederic.bothamy@free.fr>
       Gabor Kelemen <kelemeng@gnome.hu>
       Gabriel Barazer <gabriel@oxeva.fr>
@@ -96,6 +97,7 @@ CONTRIBUTORS:
       Jakob Unterwurzacher <jakobunt@gmail.com>
       Jakub Bogusz <qboosh@pld-linux.org>
       James Youngman <jay@gnu.org>
+      Jan Kara <jack@suse.cz>
       Jan Sarenik <jsarenik@redhat.com>
       Jason Vas Dias <jvdias@redhat.com>
       Jeff Mahoney <jeffm@suse.com>
@@ -114,6 +116,7 @@ CONTRIBUTORS:
       LaMont Jones <lamont@mmjgroup.com>
       Lauri Nurmi <lanurmi@iki.fi>
       Lawrence Rust <lawrence@softsystem.co.uk>
+      Linus Torvalds <torvalds@linux-foundation.org>
       Li Zefan <lizf@cn.fujitsu.com>
       Lubomir Kundrak <lkundrak@redhat.com>
       Luciano Chavez <lnx1138@us.ibm.com>
@@ -128,6 +131,7 @@ CONTRIBUTORS:
       Masatake YAMATO <jet@gyve.org>
       Matthew Garrett <mjg59@srcf.ucam.org>
       Matthias Koenig <mkoenig@suse.de>
+      Matthias König <mk@phasorlab.de>
       maximilian attems <max@stro.at>
       Maxim Levitsky <maximlevitsky@gmail.com>
       Maxim V. Dziumanenko <mvd@mylinux.com.ua>
@@ -185,6 +189,8 @@ CONTRIBUTORS:
       Tom Prince <tom.prince@ualberta.net>
       Valerie Aurora <vaurora@redhat.com>
       Vincent Deffontaines <vincent@gryzor.com>
+      Vladimir Brednikov <vbrednikov@gmail.com>
       Volker Schatz <oss@volkerschatz.com>
+      Yann Droneaud <yann@droneaud.fr>
       Yu Zhiguo <yuzg@cn.fujitsu.com>
       Zdenek Behan <rain@matfyz.cz>
