--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+util-linux-ng 2.17.1-rc1: Feb 16 2010
+* see docs/v2.17.1-ReleaseNotes or complete changelog at
+  ftp://ftp.kernel.org/pub/linux/utils/util-linux-ng/v2.17/v2.17.1-rc1-ChangeLog
+
 util-linux-ng 2.17: Jan 8 2010
 * see docs/v2.17-ReleaseNotes or complete changelog at
   ftp://ftp.kernel.org/pub/linux/utils/util-linux-ng/v2.17/v2.17-ChangeLog
