docs: update AUTHORS file
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/AUTHORS
+++ b/AUTHORS
@@ -58,6 +58,7 @@ CONTRIBUTORS:
       Benno Schulenberg <bensberg@justemail.net>
       Bernardo Innocenti <bernie@codewiz.org>
       Bernhard Walle <bwalle@suse.de>
+      Bryn M. Reeves <bmr@errorists.org>
       Cai Qian <qcai@redhat.com>
       Christophe Blaess <Christophe@Blaess.fr>
       Christoph Hellwig <hch@infradead.org>
@@ -140,7 +141,7 @@ CONTRIBUTORS:
       Michel Robitaille <robitail@IRO.UMontreal.CA>
       Mike Frysinger <vapier@gentoo.org>
       Mike Hommey <mh@glandium.org>
-      Mikel Olasagasti <hey_neken@mundurat.net>
+      Mikel Olasagasti Uranga <hey_neken@mundurat.net>
       Mikhail Gusarov <dottedmag@dottedmag.net>
       Miklos Szeredi <mszeredi@suse.cz>
       Milan Broz <mbroz@redhat.com>
