mount: posix option of vfat is obsolete
Summary of changes from v2.5.42 to v2.5.43
[PATCH] removes posix option of fat (3/5)
  This removes the posix option of vfat. The current posix options works
  only as an alias of name_check=s.

Signed-off-by: Yoshihiro Takahashi <ytakahashi@miraclelinux.com>

--- a/mount/mount.8
+++ b/mount/mount.8
@@ -2241,6 +2241,7 @@ is: ':', (u & 0x3f), ((u>>6) & 0x3f), (u>>12).
 .TP
 .B posix
 Allow two files with names that only differ in case.
+This option is obsolete.
 .TP
 .B nonumtail
 First try to make a short name without sequence number,
