wipefs: support suffixes for --offset
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/misc-utils/wipefs.8
+++ b/misc-utils/wipefs.8
@@ -31,6 +31,10 @@ Causes everything to be done except for the write() call.
 Specifies location (in bytes) of the signature which should be erased from the
 device. The offset number may include a "0x" prefix, and then the number will be
 read as a hex value. It is possible to specify multiple -o options.
+
+The \fIoffset\fR argument may be followed by binary (2^N) suffixes KiB, MiB,
+GiB, TiB, PiB and EiB (the "iB" is optional, e.g. "K" has the same meaning as
+"KiB") or decimal (10^N) suffixes KB, MB, GB, PB and EB.
 .IP "\fB\-p, \-\-parsable\fP"
 Print out in parsable instead of printable format. Encode all potentially unsafe
 characters of a string to the corresponding hex value prefixed by '\\x'.
