swaplabel: fix typo in man page
Reported-by: Marcos Felipe Rasia de Mello <marcosfrm@gmail.com>
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/disk-utils/swaplabel.8
+++ b/disk-utils/swaplabel.8
@@ -24,7 +24,7 @@ and
 .B \-U 
 are not present,
 .B swaplabel
-will simply display the awap area label and UUID of
+will simply display the swap area label and UUID of
 .IR device .
 .PP
 If an optional argument is present, then
