--- a/sys-utils/rtcwake.8
+++ b/sys-utils/rtcwake.8
@@ -21,7 +21,7 @@
 rtcwake - enter a system sleep state until specified wakeup time
 .SH SYNOPSIS
 .B rtcwake
-.RB [ \-hvVlua ]
+.RB [ \-hvVluan ]
 .RB [ \-d
 .IR device ]
 .RB [ \-m
@@ -52,11 +52,15 @@ Display a short help message that shows how to use the program.
 \fB-V\fP | \fB--version\fP
 Displays version information and exists.
 .TP
+\fB-n\fP | \fB--dry-run\fP
+This option does everything but actually setup alarm, suspend system or wait 
+for the alarm.
+.TP
 \fB-a\fP | \fB--auto\fP
 Reads the clock mode (whether the hardware clock is set to UTC or local time)
 from \fI/etc/adjtime\fP. That's the location where the
 .BR hwclock (8)
-stores that information.
+stores that information. This is the default.
 .TP
 \fB-l\fP | \fB--local\fP
 Assumes that the hardware clock is set to local time, regardless of the
