mount: use auto-loopdev for all known filesystems
The commit e580266914734898999f652025f9c7141023df66 introduced
"automatically detect and loop-mount regular files". This should be
used only for filesystems that require block devices.

All known filesystems in libblkid depend block devices, so we can
use blkid_known_fstype() as a filter for this feature.

Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/mount/mount.8
+++ b/mount/mount.8
@@ -2560,13 +2560,14 @@ will try to find some unused loop device and use that, for example
 The mount command
 .B automatically
 creates a loop device from a regular file if a filesystem type is
-not specified, for example:
+not specified or the filesystem is known for libblkid, for example:
 .RS
 .sp
 .B "mount /tmp/disk.img /mnt"
 .sp
+.B "mount -t ext3 /tmp/disk.img /mnt"
+.sp
 .RE
-
 This type of mount knows about four options, namely
 .BR loop ", " offset ", " sizelimit " and " encryption ,
 that are really options to
