findmnt: add {fs,vfs}-options columns
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/misc-utils/findmnt.8
+++ b/misc-utils/findmnt.8
@@ -91,6 +91,8 @@ Define output columns. Currently are supported
 .BR TARGET ,
 .BR FSTYPE ,
 .BR OPTIONS ,
+.BR VFS-OPTIONS ,
+.BR FS-OPTIONS ,
 .BR LABEL
 and
 .BR UUID .
