rtcwake: add disable action to rtcwake man page
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/sys-utils/rtcwake.8
+++ b/sys-utils/rtcwake.8
@@ -114,6 +114,9 @@ Don't suspend. The rtcwake command sets RTC wakeup time only.
 .B on
 Don't suspend, but read RTC device until alarm time appears. This mode is
 useful for debugging.
+.TP
+.B disable
+Disable previously set alarm.
 .RE
 .PP
 .SH NOTES
