blkid: update man page/usage()
The "-s <tag>" options is usable for low-level probing more too. This
feature should be documented.

Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/misc-utils/blkid.8
+++ b/misc-utils/blkid.8
@@ -33,6 +33,8 @@ blkid \- command\-line utility to locate/print block device attributes
 
 .B blkid
 .RB -p
+.RB [ \-s
+.IR tag ]
 .RB [ \-O
 .IR offset ]
 .RB [ \-S
