--- a/mount/mount.8
+++ b/mount/mount.8
@@ -2415,13 +2415,7 @@ was specified.
 .BI logbufs= value
 Set the number of in-memory log buffers.  Valid numbers range
 from 2-8 inclusive.
-The default value is 8 buffers for filesystems with a
-blocksize of 64KiB, 4 buffers for filesystems with a blocksize
-of 32KiB, 3 buffers for filesystems with a blocksize of 16KiB
-and 2 buffers for all other configurations.  Increasing the
-number of buffers may increase performance on some workloads
-at the cost of the memory used for the additional log buffers
-and their associated control structures.
+The default value is 8 buffers for any recent kernel.
 .TP
 .BI logbsize= value
 Set the size of each in-memory log buffer.
@@ -2429,8 +2423,7 @@ Size may be specified in bytes, or in kilobytes with a "k" suffix.
 Valid sizes for version 1 and version 2 logs are 16384 (16k) and
 32768 (32k).  Valid sizes for version 2 logs also include
 65536 (64k), 131072 (128k) and 262144 (256k).
-The default value for machines with more than 32MiB of memory
-is 32768, machines with less memory use 16384 by default.
+The default value for any recent kernel is 32768.
 .TP
 \fBlogdev=\fP\fIdevice\fP and \fBrtdev=\fP\fIdevice\fP
 Use an external log (metadata journal) and/or real-time device.
