uuidd: spell the plural of "UUID" consistently as "UUIDs"
Signed-off-by: Benno Schulenberg <bensberg@justemail.net>

--- a/misc-utils/uuidd.8
+++ b/misc-utils/uuidd.8
@@ -27,9 +27,9 @@ uuidd \- UUID generation daemon
 The
 .B uuidd
 daemon is used by the UUID library to generate
-universally unique identifiers (UUIDs), especially time-based UUID's
+universally unique identifiers (UUIDs), especially time-based UUIDs
 in a secure and guaranteed-unique fashion, even in the face of large
-numbers of threads trying to grab UUID's running on different CPU's.
+numbers of threads trying to grab UUIDs running on different CPUs.
 .SH OPTIONS
 .TP
 .B \-d
@@ -44,7 +44,7 @@ If a currently uuidd daemon is running, kill it.
 When issuing a test request to a running uuidd, request a bulk response
 of
 .I number
-UUID's.
+UUIDs.
 .TP
 .BI \-p  " pidfile"
 Specify the pathname where the pid file should be written.  By default,
